# python-sdk

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml  test.py
.github/workflows/: publish_pypi.yml
browserbase/: __init__.py
browserbase/helpers/: __init__.py  anthropic.py  gpt4.py  gpt4v.py  utils.py
browserbase/models/: __init__.py  context.py  context_service.py  session_service.py
notebooks/: Test Recording Display.ipynb
scripts/: __init__.py  init_playwright.py  init_selenium.py
scripts/models/: try_session.py
tests/: lib.py
