[project]
name = "browserbase"
version = "0.2.0"
authors = [
  { name="Browserbase", email="support@browserbase.com" },
]
description = "Browserbase Python SDK"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "playwright >= 1.43.0",
  "pydantic >= 2.7.1",
  "httpx >= 0.27.0"
]

[project.urls]
Homepage = "https://browserbase.com"
Source = "https://github.com/browserbase/python-sdk"
Issues = "https://github.com/browserbase/python-sdk/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["browserbase"]
